# RookieProjections-public

./: .gitignore  CLAUDE.md  Makefile  pseudo_report_catch_metrics.md  pyproject.toml  requirements.txt  retrain.py
aggregation/: aggregate_college_stats.py  aggregate_rb_college_stats.py  build_dynasty_dataset.py  wr_dynasty_value.py
archive/features/: draft_capital_curve_viz.py  engineer_breakout_age.py  engineer_catch_pct.py  engineer_yprr_breakout.py  eval_breakout_magnitudes.py  feature_importance.py  feature_plots.py  feature_validation_layers3_5.py  leak_test_yprr_vs_yptpa.py  rb_athleticism_pca.py  rb_feature_investigation.py  rb_feature_top10_viz.py
modeling/: base_model.py  classify_players.py  evaluate_holdout.py  evaluate_rb_holdout.py  predict_prospects.py  predict_rb_prospects.py  rb_model.py  wr_model.py
modeling/archive/: bayesian_ordinal.py  combine_predictions.py  elastic_net_ordinal.py  ensemble.py  evaluate_holdout_log_dc.py  evaluate_holdout_v11.py  evaluate_holdout_v9.py  xgb_cumulative_link.py
modeling/research/: catch_composite_grid_search.py  composite_production_grid_search.py  contested_catch_analysis.py  ensemble_sweep_both_curves.py  ensemble_weight_sweep.py  feature_slot_analysis.py  (+32 more)
scraping/: draft_ages.py  nfl_draft_scraper.py  ppr_points.py  team_completions.py  team_pass_attempts.py
tests/: test_base_model.py  test_rb_model.py  test_wr_model.py
viz/: base_profile.py  gen_retro_profile.py  generate_top10_pdfs.py  prospect_profile.py  rb_prospect_profile.py  sophomore_profiles.py
wrangling/: filter_per_route.py  join_grades.py
(+44 files in other folders)
